LUT-33432 : init v8
Verified on a fresh v8 site (core 8.0.2-SNAPSHOT): migration checks pass, no compiler warning, end-to-end bench green.
Verified on a v7 database (core 7.1.8, plugin-linkpages 5.0.2-SNAPSHOT) taken over by the v8 site: the update completes, the site starts, 6 functions unchanged, 3 working again where the v7 leg failed, no regression.